--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "scripts": {
     "start": "GENERATE_SOURCEMAP=false react-scripts start",
-    "build": "BUILD_PATH='./build_temp' react-scripts build && rm -rf ./build/* && mkdir -p ./build && cp -rf ./build_temp/* ./build && rm -rf ./build_temp && cp -rf build/* /var/www/html",
+    "build": "BUILD_PATH='./build_temp' react-scripts build && rm -rf ./build/* && mkdir -p ./build && cp -rf ./build_temp/* ./build && rm -rf ./build_temp",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
