--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "GENERATE_SOURCEMAP=false react-scripts start",
-    "build": "BUILD_PATH='./build_temp' react-scripts build && rm -rf ./build/* && mkdir -p ./build && cp -rf ./build_temp/* ./build && rm -rf ./build_temp",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "flow": "flow",
+    "start:prod": "node dist/app.js"
   },
   "eslintConfig": {
     "extends": [
