--- a/package.json
+++ b/package.json
@@ -6,11 +6,7 @@
     "@apollo/client": "^3.8.10",
     "@ensdomains/ens-validation": "^0.1.0",
     "@ensdomains/eth-ens-namehash": "^2.0.15",
-    "@rainbow-me/rainbowkit": "^1.3.3",
     "@tanstack/react-query": "^5.17.19",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
     "@web3modal/wagmi": "4.0.0-alpha.0",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.2",
@@ -26,7 +22,7 @@
     "react-moment": "^1.1.3",
     "react-numeral": "^1.1.1",
     "react-router-dom": "^6.21.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.30.1",
     "react-toastify": "^10.0.4",
     "viem": "2.x",
