--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "mns-app",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@apollo/client": "^3.8.10",
     "@ensdomains/ens-validation": "^0.1.0",
     "@ensdomains/eth-ens-namehash": "^2.0.15",
-    "@tanstack/react-query": "^5.17.19",
-    "@web3modal/wagmi": "4.0.0-alpha.0",
+    "@tanstack/react-query": "^5.66.0",
+    "@web3modal/wagmi": "^5.1.11",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.2",
     "ethers": "^6.10.0",
@@ -15,44 +22,29 @@
     "json5": "^2.2.3",
     "moment": "^2.30.1",
     "randomstring": "^1.3.0",
-    "react": "^18.2.0",
+    "react": "^19.0.0",
     "react-bootstrap": "^2.10.0",
     "react-countdown-circle-timer": "^3.2.1",
-    "react-dom": "^18.2.0",
-    "react-moment": "^1.1.3",
+    "react-dom": "^19.0.0",
     "react-numeral": "^1.1.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.1",
     "react-toastify": "^10.0.4",
-    "viem": "2.x",
-    "wagmi": "^2.5.2",
+    "viem": "^2.23.2",
+    "wagmi": "^2.14.11",
     "web-vitals": "^2.1.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "flow": "flow",
-    "start:prod": "node dist/app.js"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@eslint/js": "^9.19.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "globals": "^15.14.0",
+    "vite": "^6.1.0"
   }
 }
