--- a/.env.template
+++ b/.env.template
@@ -1,17 +1,17 @@
-REACT_APP_PROJECT_ID=
-REACT_APP_ALCHEMY_KEY=
-REACT_APP_GRAPHAPI_URL=
-REACT_APP_SUPPORTED_CHAIN_ID=
-REACT_APP_MONREGISTERCONTROLLER=
-REACT_APP_NODE_ENV=development
-REACT_APP_NATIVE_TOKEN=ETH
-REACT_APP_PUBLICRESOLVER=
-REACT_APP_MINCOMMITMENTAGE=
-REACT_APP_MAXCOMMITMENTAGE=
-REACT_APP_GRACE_PREIOD=
-REACT_APP_PREMIUM_PERIOD=
-REACT_APP_TWITTER_URL=
-REACT_APP_GITHUB_URL=
-REACT_APP_DISCORD_URL=
-REACT_APP_CONTRACT_URL=
-REACT_APP_METADATA_URL=
+VITE_APP_PROJECT_ID=
+VITE_APP_ALCHEMY_KEY=
+VITE_APP_GRAPHAPI_URL=
+VITE_APP_SUPPORTED_CHAIN_ID=
+VITE_APP_MONREGISTERCONTROLLER=
+VITE_APP_NODE_ENV=development
+VITE_APP_NATIVE_TOKEN=ETH
+VITE_APP_PUBLICRESOLVER=
+VITE_APP_MINCOMMITMENTAGE=
+VITE_APP_MAXCOMMITMENTAGE=
+VITE_APP_GRACE_PREIOD=
+VITE_APP_PREMIUM_PERIOD=
+VITE_APP_TWITTER_URL=
+VITE_APP_GITHUB_URL=
+VITE_APP_DISCORD_URL=
+VITE_APP_CONTRACT_URL=
+VITE_APP_METADATA_URL=
