--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,30 +11,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.10",
+    "@apollo/client": "^3.13.0",
     "@ensdomains/ens-validation": "^0.1.0",
     "@ensdomains/eth-ens-namehash": "^2.0.15",
     "@tanstack/react-query": "^5.66.0",
     "@web3modal/wagmi": "^5.1.11",
-    "bootstrap": "^5.3.2",
-    "dotenv": "^16.3.2",
-    "ethers": "^6.10.0",
-    "graphql": "^16.8.1",
+    "bootstrap": "^5.3.3",
+    "ethers": "^6.13.5",
+    "graphql": "^16.10.0",
     "json5": "^2.2.3",
     "moment": "^2.30.1",
-    "randomstring": "^1.3.0",
+    "randomstring": "^1.3.1",
     "react": "^19.0.0",
-    "react-bootstrap": "^2.10.0",
+    "react-bootstrap": "^2.10.9",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^19.0.0",
-    "react-numeral": "^1.1.1",
-    "react-router-dom": "^6.21.3",
-    "react-scripts": "^5.0.1",
-    "react-slick": "^0.30.1",
-    "react-toastify": "^10.0.4",
+    "react-router-dom": "^7.1.5",
+    "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.3",
     "viem": "^2.23.2",
     "wagmi": "^2.14.11",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^4.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
