--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,7 @@ web_modules/
 .env.production.local
 .env.local
 .env.production
+dist
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -90,6 +91,7 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
+
 
 # Gatsby files
 .cache/
