--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@apollo/client": "^3.13.0",
     "@ensdomains/ens-validation": "^0.1.0",
     "@ensdomains/eth-ens-namehash": "^2.0.15",
-    "@tanstack/react-query": "^5.66.0",
+    "@reown/appkit": "^1.6.8",
+    "@reown/appkit-adapter-wagmi": "^1.6.8",
+    "@tanstack/react-query": "^5.66.7",
+    "@wagmi/connectors": "^5.7.7",
+    "@wagmi/core": "^2.16.4",
     "@web3modal/wagmi": "^5.1.11",
     "bootstrap": "^5.3.3",
     "ethers": "^6.13.5",
@@ -29,7 +33,7 @@
     "react-router-dom": "^7.1.5",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.3",
-    "viem": "^2.23.2",
+    "viem": "2.x",
     "wagmi": "^2.14.11",
     "web-vitals": "^4.2.4"
   },
